...
    AddressMockDataSource.seed(_db);
    _db.seedOnce(table, () {
      _db.table(table).addAll([
        {
          'id': MockDatabase.customerId,
          'phone': MockDatabase.customerPhone,
          'fullName': 'خالد المنصوري',
          'role': 'customer',
        },
        {
          'id': MockDatabase.driverId,
          'phone': MockDatabase.driverPhone,
          'fullName': 'أحمد علي',
          'role': 'driver',
        },
      ]);
    });
  }

...
